# aivia

./: .gitignore  AGENTS.md  CLAUDE.md  EXIT.md  GEMINI.md  README.md  eldritch-awakening.skill
.claude/: settings.local.json
.claude-plugin/: plugin.json
artifact/scripts/: .gitignore  CLAUDE.md  publish_package.sh
artifact/scripts/WORKING/: CLAUDE.md  README.md  arxiv_search.py  company-research.py  file_info.py  gtts_cli.py  perplexity-multi.py  perplexity_multi_v2.py  ping_mistral.py  ping_openai.py  ping_xai.py  time_calc.py  time_calc_v2.py  xai_tools.py  xnamer.py  xnamer_v2.py
artifact/scripts/needs_testing/: anthropic-flask.py
artifact/scripts/renamers/: CLAUDE.md  README.md  rename_academic_pdfs.py
artifact/scripts/renamers/namecrawler/: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
artifact/scripts/renamers/namecrawler/.github/: FUNDING.yml
artifact/scripts/renamers/namecrawler/snippets/: openai_chat_streaming.md
artifact/scripts/renamers/namecrawler/src/namecrawler/: __init__.py  cli.py
artifact/scripts/renamers/namecrawler/tests/: __init__.py  conftest.py  test_namecrawler.py
commands/: exit.md  play.md  status.md
content/: narrative.md  story.json
content/characters/: entity.md
content/keystones/: 01-signal.md  02-corruption.md  03-hunt.md  04-assembly.md  05-awakening.md
engine/scripts/: genesis.sh  install.sh  manifest_corruption.sh  state.sh  tester.sh
lib/: box.sh
plugins/aivia/: .gitignore  CLAUDE.md
scripts/: install.sh
skills/eldritch/: SKILL.md
skills/eldritch-awakening/: SKILL.md
(+120 files in other folders)
