[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "namecrawler"
version = "1.0.0"
description = "SHA256 hash-based file renaming for privacy and deduplication"
authors = [{name="Luke Steuber", email="luke@lukesteuber.com"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["hash", "rename", "sha256", "deduplication", "privacy", "file-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/lukeslp/kernel"
Repository = "https://github.com/lukeslp/kernel/tree/master/projects/renamers/namecrawler"
Issues = "https://github.com/lukeslp/kernel/issues"

[project.scripts]
namecrawler = "namecrawler.cli:main"
